Added new methods for supporting Paging and Sorting